--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -24,6 +24,8 @@
 
   <!-- Application bootstrap  -->
   <script src="js/app.js"></script>
+  <script src="js/config/routes.js"></script>
+  <script src="js/controllers/NavigationController.js"></script>
 
   <!-- HTML Content -->
 
@@ -39,20 +41,20 @@
 
   <!-- Popular salon functions -->
          <md-button aria-label="new promotion">
-           <md-icon md-svg-icon="img/icons/promotion.svg"></md-icon>
+           <md-icon md-svg-icon="img/icons/promotion.svg" ui-sref="home.promotion.new"></md-icon>
          </md-button>
          <md-button aria-label="new appointment">
-           <md-icon md-svg-icon="img/icons/calendar.svg"></md-icon>
+           <md-icon md-svg-icon="img/icons/calendar.svg" ui-sref="home.calendar.new"></md-icon>
          </md-button>
          <md-button aria-label="new customer">
-           <md-icon md-svg-icon="img/icons/team.svg"></md-icon>
+           <md-icon md-svg-icon="img/icons/team.svg" ui-sref="home.customers.new"></md-icon>
          </md-button>
 
   <!-- User-oriented buttons -->
-         <md-button class="md-raised md-accent" aria-label="Sign-in">
+         <md-button class="md-raised md-accent" ui-sref="home.account" aria-label="My-account">
            My Account
          </md-button>
-         <md-button class="md-raised" aria-label="Sign-in">
+         <md-button class="md-raised" ui-sref="home.login" aria-label="Sign-in">
            Sign-in
          </md-button>
        </div>
@@ -78,10 +80,7 @@
 
     </md-content>
   </div>
-
-
   <!-- Angular Dynamic templating -->
-  <main ng-view></main>
-
+  <main ui-view></main>
 </body>
 </html>
