--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -26,6 +26,7 @@
   <script src="js/app.js"></script>
   <script src="js/config/routes.js"></script>
   <script src="js/controllers/NavigationController.js"></script>
+  <script src="js/controllers/HomeController.js"></script>
 
   <!-- HTML Content -->
 
