--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -24,14 +24,24 @@
 
   <!-- Application bootstrap  -->
   <script src="js/app.js"></script>
+  <script src="js/config/theming.js"></script>
   <script src="js/config/routes.js"></script>
+  <script src="js/services/SessionService.js"></script>
+  <script src="js/services/UserService.js"></script>
   <script src="js/controllers/NavigationController.js"></script>
   <script src="js/controllers/HomeController.js"></script>
+  <script src="js/controllers/CalendarController.js"></script>
+  <script src="js/controllers/AccountController.js"></script>
+  <script src="js/controllers/CustomersController.js"></script>
+  <script src="js/controllers/PromotionsController.js"></script>
+  <script src="js/controllers/InventoryController.js"></script>
+  <script src="js/controllers/ReportsController.js"></script>
+  <script src="js/controllers/SettingsController.js"></script>
 
   <!-- HTML Content -->
 
   <!-- Navigation Bar -->
-    <div ng-controller="NavCtrl" ng-cloak>
+    <div ng-controller="NavigationCtrl" ng-cloak>
       <md-content class="md-padding">
         <md-toolbar>
        <div class="md-toolbar-tools">
@@ -42,20 +52,29 @@
 
   <!-- Popular salon functions -->
          <md-button aria-label="new promotion">
-           <md-icon md-svg-icon="img/icons/promotion.svg" ui-sref="home.promotion.new"></md-icon>
+           <md-icon md-svg-icon="img/icons/promotion.svg" ng-click="displayNewPromotionModal()"></md-icon>
          </md-button>
          <md-button aria-label="new appointment">
-           <md-icon md-svg-icon="img/icons/calendar.svg" ui-sref="home.calendar.new"></md-icon>
+           <md-icon md-svg-icon="img/icons/calendar.svg" ng-click="displayNewAppointmentModal()"></md-icon>
          </md-button>
          <md-button aria-label="new customer">
-           <md-icon md-svg-icon="img/icons/team.svg" ui-sref="home.customers.new"></md-icon>
+           <md-icon md-svg-icon="img/icons/team.svg" ng-click="displayNewCustomerModal()"></md-icon>
          </md-button>
 
   <!-- User-oriented buttons -->
-         <md-button class="md-raised md-accent" ui-sref="home.account" aria-label="My-account">
-           My Account
-         </md-button>
-         <md-button class="md-raised" ui-sref="home.login" aria-label="Sign-in">
+                <md-menu>
+                  <md-button class="md-raised md-accent" ng-click="$mdOpenMenu()" aria-label="My-account">
+                    My Account
+                  </md-button>
+                  <md-menu-content>
+                    <md-menu-item><md-button ng-click="user.profile.displayProfile()">View/Edit Profile</md-button></md-menu-item>
+                    <md-menu-item><md-button ng-click="user.history.displayChangeHistory()">View/Edit Change History</md-button></md-menu-item>
+                    <md-menu-divider></md-menu-divider>
+                    <md-menu-item><md-button ng-click="user.session.endSession()">Log Out</md-button></md-menu-item>
+                  </md-menu-content>
+                </md-menu>
+
+         <md-button ng-if="user.session.sessionActive" class="md-raised" ng-click="displayLoginForm()" aria-label="Sign-in">
            Sign-in
          </md-button>
        </div>
@@ -66,6 +85,7 @@
         <md-nav-item md-nav-sref="home" name="home">Dashboard</md-nav-item>
         <md-nav-item md-nav-sref="calendar" name="calendar">Calendar</md-nav-item>
         <md-nav-item md-nav-sref="customers" name="customers">Customers</md-nav-item>
+        <md-nav-item md-nav-sref="inventory" name="inventory">Inventory</md-nav-item>
         <md-nav-item md-nav-sref="settings" name="settings">Settings</md-nav-item>
         <md-nav-item md-nav-sref="reports" name="reports">Reports</md-nav-item>
         <span flex></span>
