--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -74,7 +74,7 @@
                   </md-menu-content>
                 </md-menu>
 
-         <md-button ng-if="user.session.sessionActive" class="md-raised" ng-click="displayLoginForm()" aria-label="Sign-in">
+         <md-button class="md-raised" ng-click="displayLoginForm()" aria-label="Sign-in">
            Sign-in
          </md-button>
        </div>
