--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -26,6 +26,7 @@
   <script src="js/app.js"></script>
   <script src="js/config/theming.js"></script>
   <script src="js/config/routes.js"></script>
+  <script src="js/services/DataService.js"></script>
   <script src="js/services/SessionService.js"></script>
   <script src="js/services/UserService.js"></script>
   <script src="js/controllers/NavigationController.js"></script>
