--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -92,7 +92,7 @@
         <span flex></span>
 
   <!-- Personalized greeting message -->
-        <span>Welcome <b>User</b></span>
+        <span>Welcome <b>{{user}}</b></span>
       </md-nav-bar>
 
  <!-- Dynamic content example -->
