--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,111 +1,124 @@
-<html lang="en" >
-<head>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+<html lang="en">
+    <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <!-- Angular Material style sheet -->
-  <link rel="stylesheet" href="node_modules/angular-material/angular-material.min.css">
+        <!-- Angular Material style sheet -->
+        <link rel="stylesheet" href="node_modules/angular-material/angular-material.min.css">
 
-  <!-- Personal style sheet -->
-  <link rel="stylesheet" href="css/app.css">
-</head>
-<body ng-app="app" ng-cloak>
+        <!-- Roboto style font -->
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic">
 
-  <!-- Angular Material requires Angular.js Libraries -->
-  <script src="node_modules/angular/angular.min.js"></script>
-  <script src="node_modules/angular-animate/angular-animate.min.js"></script>
-  <script src="node_modules/angular-aria/angular-aria.min.js"></script>
-  <script src="node_modules/angular-messages/angular-messages.min.js"></script>
+        <!-- Personal style sheet -->
+        <link rel="stylesheet" href="css/app.css">
+    </head>
+    <body ng-app="app" ng-cloak>
 
-  <!-- Angular dependencies -->
-  <script src="node_modules/angular-ui-router/release/angular-ui-router.min.js"></script>
+        <!-- Angular Material requires Angular.js Libraries -->
+        <script src="node_modules/angular/angular.min.js"></script>
+        <script src="node_modules/angular-animate/angular-animate.min.js"></script>
+        <script src="node_modules/angular-aria/angular-aria.min.js"></script>
+        <script src="node_modules/angular-messages/angular-messages.min.js"></script>
 
-  <!-- Angular Material Library -->
-  <script src="node_modules/angular-material/angular-material.min.js"></script>
+        <!-- Angular dependencies -->
+        <script src="node_modules/angular-ui-router/release/angular-ui-router.min.js"></script>
 
-  <!-- Application bootstrap  -->
-  <script src="js/app.js"></script>
-  <script src="js/config/theming.js"></script>
-  <script src="js/config/routes.js"></script>
-  <script src="js/model/User.js"></script>
-  <script src="js/services/DataService.js"></script>
-  <script src="js/services/LoginService.js"></script>
-  <script src="js/services/SessionService.js"></script>
-  <script src="js/services/UserService.js"></script>
-  <script src="js/controller/NavigationController.js"></script>
-  <script src="js/controller/HomeController.js"></script>
-  <script src="js/controller/CalendarController.js"></script>
-  <script src="js/controller/AccountController.js"></script>
-  <script src="js/controller/CustomersController.js"></script>
-  <script src="js/controller/PromotionsController.js"></script>
-  <script src="js/controller/InventoryController.js"></script>
-  <script src="js/controller/ReportsController.js"></script>
-  <script src="js/controller/SettingsController.js"></script>
-  <script src="js/controller/DialogController.js"></script>
+        <!-- Angular Material Library -->
+        <script src="node_modules/angular-material/angular-material.min.js"></script>
 
-  <!-- HTML Content -->
+        <!-- Application bootstrap  -->
+        <script src="js/app.js"></script>
+        <script src="js/config/theming.js"></script>
+        <script src="js/config/routes.js"></script>
+        <script src="js/model/User.js"></script>
+        <script src="js/services/DataService.js"></script>
+        <script src="js/services/LoginService.js"></script>
+        <script src="js/services/SessionService.js"></script>
+        <script src="js/services/UserService.js"></script>
+        <script src="js/controller/NavigationController.js"></script>
+        <script src="js/controller/HomeController.js"></script>
+        <script src="js/controller/CalendarController.js"></script>
+        <script src="js/controller/AccountController.js"></script>
+        <script src="js/controller/CustomersController.js"></script>
+        <script src="js/controller/PromotionsController.js"></script>
+        <script src="js/controller/InventoryController.js"></script>
+        <script src="js/controller/ReportsController.js"></script>
+        <script src="js/controller/SettingsController.js"></script>
+        <script src="js/controller/DialogController.js"></script>
 
-  <!-- Navigation Bar -->
-    <div ng-controller="NavigationCtrl" ng-cloak>
-      <md-content class="md-padding">
-        <md-toolbar>
-       <div class="md-toolbar-tools">
-         <md-button aria-label="logo">
-           <md-icon md-svg-icon="img/icons/barbershop.svg"></md-icon>
-         </md-button>
-         <span flex></span>
+        <!-- HTML Content -->
 
-  <!-- Popular salon functions -->
-         <md-button aria-label="new promotion">
-           <md-icon md-svg-icon="img/icons/promotion.svg" ng-click="displayNewPromotionModal()"></md-icon>
-         </md-button>
-         <md-button aria-label="new appointment">
-           <md-icon md-svg-icon="img/icons/calendar.svg" ng-click="displayNewAppointmentModal()"></md-icon>
-         </md-button>
-         <md-button aria-label="new customer">
-           <md-icon md-svg-icon="img/icons/team.svg" ng-click="displayNewCustomerModal()"></md-icon>
-         </md-button>
+        <!-- Navigation Bar -->
+        <div ng-controller="NavigationCtrl" ng-cloak>
+            <md-content class="md-padding">
+                <md-toolbar class="md-whiteframe-2dp">
+                    <div class="md-toolbar-tools">
+                        <md-button aria-label="logo">
+                            <md-icon md-svg-icon="img/icons/barbershop.svg"></md-icon>
+                        </md-button>
+                        <span flex></span>
 
-  <!-- User-oriented buttons -->
-                <md-menu>
-                  <md-button class="md-raised md-accent" ng-click="$mdOpenMenu()" aria-label="My-account">
-                    My Account
-                  </md-button>
-                  <md-menu-content>
-                    <md-menu-item><md-button ng-click="user.profile.displayProfile()">View/Edit Profile</md-button></md-menu-item>
-                    <md-menu-item><md-button ng-click="user.history.displayChangeHistory()">View/Edit Change History</md-button></md-menu-item>
-                    <md-menu-divider></md-menu-divider>
-                    <md-menu-item><md-button ng-click="user.session.endSession()">Log Out</md-button></md-menu-item>
-                  </md-menu-content>
-                </md-menu>
+                        <!-- Popular salon functions -->
+                        <md-button aria-label="new promotion">
+                            <md-icon md-svg-icon="img/icons/promotion.svg" ng-click="displayNewPromotionModal()"></md-icon>
+                        </md-button>
+                        <md-button aria-label="new appointment">
+                            <md-icon md-svg-icon="img/icons/calendar.svg" ng-click="displayNewAppointmentModal()"></md-icon>
+                        </md-button>
+                        <md-button aria-label="new customer">
+                            <md-icon md-svg-icon="img/icons/team.svg" ng-click="displayNewCustomerModal()"></md-icon>
+                        </md-button>
 
-         <md-button class="md-raised" ng-click="displayLoginPrompt($event)" ng-href="#" aria-label="Sign-in">
-           Sign-in
-         </md-button> {{status}}
-       </div>
-       </md-toolbar>
-  <!-- Navigation sub-header -->
-      <md-nav-bar md-selected-nav-item="currentNavItem" nav-bar-aria-label="navigation links">
-  <!-- Navigation tabs -->
-        <md-nav-item md-nav-sref="home" name="home">Dashboard</md-nav-item>
-        <md-nav-item md-nav-sref="calendar" name="calendar">Calendar</md-nav-item>
-        <md-nav-item md-nav-sref="customers" name="customers">Customers</md-nav-item>
-        <md-nav-item md-nav-sref="inventory" name="inventory">Inventory</md-nav-item>
-        <md-nav-item md-nav-sref="settings" name="settings">Settings</md-nav-item>
-        <md-nav-item md-nav-sref="reports" name="reports">Reports</md-nav-item>
-        <span flex></span>
+                        <!-- User-oriented buttons -->
+                        <md-menu>
+                            <md-button class="md-flat md-accent" ng-click="$mdOpenMenu()" aria-label="My-account">
+                                My Account
+                            </md-button>
+                            <md-menu-content>
+                                <md-menu-item>
+                                    <md-button ui-sref="#/user/({userId: 'user.userId'})">View/Edit Profile</md-button>
+                                </md-menu-item>
+                                <md-menu-item>
+                                    <md-button ui-sref="history">View/Edit Change History</md-button>
+                                </md-menu-item>
+                                <md-menu-divider></md-menu-divider>
+                                <md-menu-item>
+                                    <md-button ng-click="logout()">Log Out</md-button>
+                                </md-menu-item>
+                            </md-menu-content>
+                        </md-menu>
 
-  <!-- Personalized greeting message -->
-        <span>Welcome <b>{{user.name}}</b></span>
-      </md-nav-bar>
+                        <md-button ng-if="user.name == 'User'" class="md-flat" ng-click="displayLoginPrompt($event)" ng-href="#" aria-label="Sign-in">
+                            Sign-in
+                        </md-button>
+                        <!-- Personalized greeting message -->
+                        <span class="md-subhead">Welcome
+                            <b class="md-primary">{{user.name}}</b>
+                        </span>
+                    </div>
+                </md-toolbar>
+                <!-- Navigation sub-header -->
+                <md-nav-bar md-selected-nav-item="currentNavItem" nav-bar-aria-label="navigation links">
+                    <!-- Navigation tabs -->
+                    <md-nav-item md-nav-sref="home" name="home">Dashboard</md-nav-item>
+                    <md-nav-item md-nav-sref="calendar" name="calendar">Calendar</md-nav-item>
+                    <md-nav-item md-nav-sref="customers" name="customers">Customers</md-nav-item>
+                    <md-nav-item md-nav-sref="inventory" name="inventory">Inventory</md-nav-item>
+                    <md-nav-item md-nav-sref="settings" name="settings">Settings</md-nav-item>
+                    <md-nav-item md-nav-sref="reports" name="reports">Reports</md-nav-item>
+                    <span flex></span>
+                </md-nav-bar>
 
- <!-- Dynamic content example -->
-      <div class="ext-content">
-        External content for <b><span>{{currentNavItem}}</span></b>
-      </div>
+                <!-- Dynamic content example -->
+                <!-- <div class="ext-content">
+                    External content for
+                    <b>
+                        <span>{{currentNavItem}}</span>
+                    </b>
+                </div> -->
 
-    </md-content>
-  </div>
-  <!-- Angular Dynamic templating -->
-  <main ui-view></main>
-</body>
+            </md-content>
+        </div>
+        <!-- Angular Dynamic templating -->
+        <main ui-view></main>
+    </body>
 </html>
